<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BroadcastReceiver.BroadcastReceiverActivity">


    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="589dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_instructions"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btnActivateReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_activatereceiver"/>

        <TextView
            android:id="@+id/customInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_broadcast"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btnSendBroadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_customBroadcast"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>